Adding more awesome micropythons to the timeline, fixing dates for lego, openmv, pycom, adding two images with more to come, moved sign to the bottom of the image

--- a/timeline/timeline.conf
+++ b/timeline/timeline.conf
@@ -1,4 +1,4 @@
-#LINUX DISTRIBUTION TIMELINE | GNUCLAD SETTINGS
+# MicroPython TIMELINE | GNUCLAD SETTINGS
 
 # This config file is stripped down with the explanations removed.
 # For a detailed list, consult the gnuclad manual.
@@ -15,7 +15,7 @@ infoBoxFontColor = #000
 infoBoxColor1 = #b9d5ff
 infoBoxColor2 = #70b3f2
 infoBoxX = 30
-infoBoxY = 90
+infoBoxY = 290
 infoBoxWidth = 610
 infoBoxHeight = 190
 
@@ -28,7 +28,7 @@ sortKey = 0
 optimise = 01
 strictOverlaps = 1
 treeSpacing = 1
-treeSpacingBiggerThan = 5
+treeSpacingBiggerThan = 3
 
 mainBackground = #fff
 rulerWidth = 2
